@@ -7,7 +7,7 @@
     <import addon="script.module.requests" version="2.9.1"/> 
     </requires>
     <extension point="xbmc.python.pluginsource"
-               library="addon.py">
+               library="default.py">
         <provides>video</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
