@@ -3,6 +3,7 @@ Version 1.0.2
 -  Added additional stream and video validation checking to eliminate Kodi playback errors.
 -  Added display indication for future video on demand events
 -  Added date / time format checking for Live Events
+-  Added inital Hockey Night parsing and fixed bug displaying Hockey Night events before they are published
 
 Version 1.0.1
 -  Added alternate mediaId parsing for Live events
